@@ -10,8 +10,8 @@ version = 0.84
 :version      = 1.92
 release_tests = 1
 travis_status = 1
-installer     = ModuleBuild
 appveyor      = hbsdj04dds4oy6wo
+diag          = +Event
 
 diag_preamble = | $post_diag = sub
 diag_preamble = | {
@@ -36,10 +36,6 @@ remove = Carp
 remove = Test::More
 remove = warnings::register
 
-[Prereqs / RecommendedPrereqs]
--relationship       = recommends
-EV                  = 0
-
 [Author::Plicease::Upload]
 
 [Author::Plicease::Thanks]
@@ -50,4 +46,3 @@ contributor = Scott Wiersdorf
 [TextTabs]
 installer = 1
 
-[Meta::Dynamic::Config]
